@@ -7,7 +7,7 @@ use Math::Prime::Util::GMP qw/is_carmichael is_fundamental is_totient is_gaussia
                               is_polygonal polygonal_nth/;
 
 plan tests => 0
-            + 4 # is_carmichael
+            + 5 # is_carmichael
             + 4 # is_fundamental
             + 8 # is_gaussian_prime
             + 9 # is_totient
@@ -21,6 +21,7 @@ is_deeply( [grep { is_carmichael($_) } 1 .. 20000],
 ok( is_carmichael("1298392318741906953539071949881"), "Large Carmichael" );
 ok( is_carmichael("341627175004511735787409078802107169251"), "Larger Carmichael" );
 ok( is_carmichael("1296000000000001999446840000001028237568411600176260833069969529"), "64-digit Carmichael U_3(10^20+51426)" );
+ok( !is_carmichael("85474748242379385366094816268973624888150242213226622180749138318386315935863212081942773317297904345474600957207428590062778602152519956800727219132027890643383467070099011582284945709124001108514764722966245494493169941622314836646386558535398146857006553207552461902964756053556805850282748662504578139090961477044287402823322355055911488039369571766331538282989461368172866093039969460784972736481613017667409050543252201255683285242294097740381698721"), "Large non-Carmichael number");
 
 ###### is_fundamental
 is_deeply( [grep { is_fundamental($_) } -50 .. 0],
